--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
 
-<html>
+<h1>Deep Mukherjee First Website</h1>
 
-<head>
-	<title>
-		Deep Mukherjee First Website
-	</title>
-</head>
-
-<body>
-	<p>hii</p>
-</body>
-
-</html>
+<p>hii deep</p>
